add approx 150k rows to db

--- a/Fall-2022-Club-Project/Example/Pipelines/Data Science Club ETL Pipeline.ipynb
+++ b/Fall-2022-Club-Project/Example/Pipelines/Data Science Club ETL Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20000/20000 [31:57<00:00, 10.43it/s]  \n"
+      "100%|██████████| 20000/20000 [36:35<00:00,  9.11it/s] \n"
      ]
     },
     {
@@ -120,163 +120,169 @@
        "      <th>analysis_url</th>\n",
        "      <th>duration_ms</th>\n",
        "      <th>time_signature</th>\n",
+       "      <th>0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.536</td>\n",
-       "      <td>0.907</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-5.324</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.1250</td>\n",
-       "      <td>0.4190</td>\n",
+       "      <td>0.737</td>\n",
+       "      <td>0.837</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>-4.802</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0394</td>\n",
+       "      <td>0.02890</td>\n",
+       "      <td>0.840000</td>\n",
+       "      <td>0.2490</td>\n",
+       "      <td>0.637</td>\n",
+       "      <td>91.014</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>5b0clm7fxE8FxuTqT0AS8t</td>\n",
+       "      <td>spotify:track:5b0clm7fxE8FxuTqT0AS8t</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/5b0clm7fxE8F...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/5b0c...</td>\n",
+       "      <td>210600.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.530</td>\n",
+       "      <td>0.419</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>-8.381</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0297</td>\n",
+       "      <td>0.13600</td>\n",
+       "      <td>0.000041</td>\n",
+       "      <td>0.1190</td>\n",
+       "      <td>0.201</td>\n",
+       "      <td>134.620</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>5b0cMj6EiDZrl4LrgpFaXB</td>\n",
+       "      <td>spotify:track:5b0cMj6EiDZrl4LrgpFaXB</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/5b0cMj6EiDZr...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/5b0c...</td>\n",
+       "      <td>232750.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.583</td>\n",
+       "      <td>0.912</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-5.578</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.1400</td>\n",
+       "      <td>0.18700</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.7650</td>\n",
-       "      <td>0.970</td>\n",
-       "      <td>169.633</td>\n",
+       "      <td>0.2430</td>\n",
+       "      <td>0.522</td>\n",
+       "      <td>79.998</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>3ggrIgQhUoFFv6vKBPg4G6</td>\n",
-       "      <td>spotify:track:3ggrIgQhUoFFv6vKBPg4G6</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/3ggrIgQhUoFF...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/3ggr...</td>\n",
-       "      <td>125693</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5B0crlj9F66CwVDQuHSOSv</td>\n",
+       "      <td>spotify:track:5B0crlj9F66CwVDQuHSOSv</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/5B0crlj9F66C...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/5B0c...</td>\n",
+       "      <td>192360.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.699</td>\n",
-       "      <td>0.901</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-4.810</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0481</td>\n",
-       "      <td>0.0141</td>\n",
-       "      <td>0.043700</td>\n",
-       "      <td>0.0411</td>\n",
-       "      <td>0.446</td>\n",
-       "      <td>127.999</td>\n",
+       "      <td>0.696</td>\n",
+       "      <td>0.839</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>-9.251</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0300</td>\n",
+       "      <td>0.01760</td>\n",
+       "      <td>0.000036</td>\n",
+       "      <td>0.0551</td>\n",
+       "      <td>0.821</td>\n",
+       "      <td>120.723</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>3GgrKLce2KSLSktzFKEzzG</td>\n",
-       "      <td>spotify:track:3GgrKLce2KSLSktzFKEzzG</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/3GgrKLce2KSL...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/3Ggr...</td>\n",
-       "      <td>229663</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5B0CwHhUa4lSOzcgDINenE</td>\n",
+       "      <td>spotify:track:5B0CwHhUa4lSOzcgDINenE</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/5B0CwHhUa4lS...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/5B0C...</td>\n",
+       "      <td>194000.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.685</td>\n",
+       "      <td>0.732</td>\n",
        "      <td>0.654</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-8.181</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2070</td>\n",
-       "      <td>0.1070</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.1270</td>\n",
-       "      <td>0.297</td>\n",
-       "      <td>75.276</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>3GGRSJW9GVO9s3rskYm0O2</td>\n",
-       "      <td>spotify:track:3GGRSJW9GVO9s3rskYm0O2</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/3GGRSJW9GVO9...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/3GGR...</td>\n",
-       "      <td>153626</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.756</td>\n",
-       "      <td>0.304</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-9.562</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.2170</td>\n",
-       "      <td>0.0191</td>\n",
-       "      <td>0.036300</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>-9.287</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.1110</td>\n",
-       "      <td>0.492</td>\n",
-       "      <td>85.359</td>\n",
+       "      <td>0.00483</td>\n",
+       "      <td>0.645000</td>\n",
+       "      <td>0.0680</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>70.044</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>3GgrY8G2WmsXhP8zjq0yvZ</td>\n",
-       "      <td>spotify:track:3GgrY8G2WmsXhP8zjq0yvZ</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/3GgrY8G2WmsX...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/3Ggr...</td>\n",
-       "      <td>283973</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.777</td>\n",
-       "      <td>0.819</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-5.770</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0294</td>\n",
-       "      <td>0.1250</td>\n",
-       "      <td>0.000006</td>\n",
-       "      <td>0.1110</td>\n",
-       "      <td>0.542</td>\n",
-       "      <td>129.971</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>3GGRZ7M2UBQEIVdXGaQ0gG</td>\n",
-       "      <td>spotify:track:3GGRZ7M2UBQEIVdXGaQ0gG</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/3GGRZ7M2UBQE...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/3GGR...</td>\n",
-       "      <td>222253</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5B0cxJ6eGpeLY55lcHAR1M</td>\n",
+       "      <td>spotify:track:5B0cxJ6eGpeLY55lcHAR1M</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/5B0cxJ6eGpeL...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/5B0c...</td>\n",
+       "      <td>391841.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
-       "0         0.536   0.907    8    -5.324     1       0.1250        0.4190   \n",
-       "0         0.699   0.901    3    -4.810     0       0.0481        0.0141   \n",
-       "0         0.685   0.654    1    -8.181     0       0.2070        0.1070   \n",
-       "0         0.756   0.304    8    -9.562     1       0.2170        0.0191   \n",
-       "0         0.777   0.819    8    -5.770     0       0.0294        0.1250   \n",
+       "   danceability  energy   key  loudness  mode  speechiness  acousticness  \\\n",
+       "0         0.737   0.837   7.0    -4.802   1.0       0.0394       0.02890   \n",
+       "0         0.530   0.419  11.0    -8.381   1.0       0.0297       0.13600   \n",
+       "0         0.583   0.912   2.0    -5.578   1.0       0.1400       0.18700   \n",
+       "0         0.696   0.839   5.0    -9.251   1.0       0.0300       0.01760   \n",
+       "0         0.732   0.654   6.0    -9.287   0.0       0.1110       0.00483   \n",
        "\n",
        "   instrumentalness  liveness  valence    tempo            type  \\\n",
-       "0          0.000000    0.7650    0.970  169.633  audio_features   \n",
-       "0          0.043700    0.0411    0.446  127.999  audio_features   \n",
-       "0          0.000000    0.1270    0.297   75.276  audio_features   \n",
-       "0          0.036300    0.1110    0.492   85.359  audio_features   \n",
-       "0          0.000006    0.1110    0.542  129.971  audio_features   \n",
+       "0          0.840000    0.2490    0.637   91.014  audio_features   \n",
+       "0          0.000041    0.1190    0.201  134.620  audio_features   \n",
+       "0          0.000000    0.2430    0.522   79.998  audio_features   \n",
+       "0          0.000036    0.0551    0.821  120.723  audio_features   \n",
+       "0          0.645000    0.0680    0.167   70.044  audio_features   \n",
        "\n",
        "                       id                                   uri  \\\n",
-       "0  3ggrIgQhUoFFv6vKBPg4G6  spotify:track:3ggrIgQhUoFFv6vKBPg4G6   \n",
-       "0  3GgrKLce2KSLSktzFKEzzG  spotify:track:3GgrKLce2KSLSktzFKEzzG   \n",
-       "0  3GGRSJW9GVO9s3rskYm0O2  spotify:track:3GGRSJW9GVO9s3rskYm0O2   \n",
-       "0  3GgrY8G2WmsXhP8zjq0yvZ  spotify:track:3GgrY8G2WmsXhP8zjq0yvZ   \n",
-       "0  3GGRZ7M2UBQEIVdXGaQ0gG  spotify:track:3GGRZ7M2UBQEIVdXGaQ0gG   \n",
+       "0  5b0clm7fxE8FxuTqT0AS8t  spotify:track:5b0clm7fxE8FxuTqT0AS8t   \n",
+       "0  5b0cMj6EiDZrl4LrgpFaXB  spotify:track:5b0cMj6EiDZrl4LrgpFaXB   \n",
+       "0  5B0crlj9F66CwVDQuHSOSv  spotify:track:5B0crlj9F66CwVDQuHSOSv   \n",
+       "0  5B0CwHhUa4lSOzcgDINenE  spotify:track:5B0CwHhUa4lSOzcgDINenE   \n",
+       "0  5B0cxJ6eGpeLY55lcHAR1M  spotify:track:5B0cxJ6eGpeLY55lcHAR1M   \n",
        "\n",
        "                                          track_href  \\\n",
-       "0  https://api.spotify.com/v1/tracks/3ggrIgQhUoFF...   \n",
-       "0  https://api.spotify.com/v1/tracks/3GgrKLce2KSL...   \n",
-       "0  https://api.spotify.com/v1/tracks/3GGRSJW9GVO9...   \n",
-       "0  https://api.spotify.com/v1/tracks/3GgrY8G2WmsX...   \n",
-       "0  https://api.spotify.com/v1/tracks/3GGRZ7M2UBQE...   \n",
+       "0  https://api.spotify.com/v1/tracks/5b0clm7fxE8F...   \n",
+       "0  https://api.spotify.com/v1/tracks/5b0cMj6EiDZr...   \n",
+       "0  https://api.spotify.com/v1/tracks/5B0crlj9F66C...   \n",
+       "0  https://api.spotify.com/v1/tracks/5B0CwHhUa4lS...   \n",
+       "0  https://api.spotify.com/v1/tracks/5B0cxJ6eGpeL...   \n",
        "\n",
        "                                        analysis_url  duration_ms  \\\n",
-       "0  https://api.spotify.com/v1/audio-analysis/3ggr...       125693   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/3Ggr...       229663   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/3GGR...       153626   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/3Ggr...       283973   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/3GGR...       222253   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/5b0c...     210600.0   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/5b0c...     232750.0   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/5B0c...     192360.0   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/5B0C...     194000.0   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/5B0c...     391841.0   \n",
        "\n",
-       "   time_signature  \n",
-       "0               4  \n",
-       "0               4  \n",
-       "0               4  \n",
-       "0               4  \n",
-       "0               4  "
+       "   time_signature    0  \n",
+       "0             4.0  NaN  \n",
+       "0             4.0  NaN  \n",
+       "0             4.0  NaN  \n",
+       "0             4.0  NaN  \n",
+       "0             4.0  NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +290,7 @@
    "source": [
     "# Extract tracks from API\n",
     "output_df = pd.DataFrame()\n",
-    "for row in tqdm(results[980001:1000001]):\n",
+    "for row in tqdm(results[1510001:1530001]):\n",
     "      output = pd.DataFrame(sp.audio_features(row))\n",
     "      output_df = pd.concat([output_df, output])\n",
     "output_df.head()"
@@ -292,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +306,7 @@
      "output_type": "stream",
      "text": [
       "20000 rows imported to database.\n",
-      "App contains (989959,) songs.\n"
+      "App contains (1519929,) songs.\n"
      ]
     }
    ],
