Add caching to the ingestion pipeline
- Implemented caching using the lru_cache decorator to reduce the number of API calls
- Updated the pipeline to call the get_playlist_tracks function instead of directly calling the Spotify API
- Added docstrings to the get_playlist_tracks function to explain what it does

--- a/InitialIngestionPipeline.ipynb
+++ b/InitialIngestionPipeline.ipynb
@@ -29,6 +29,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import lru_cache\n",
+    "\n",
+    "# Use the lru_cache decorator to cache the result of the function\n",
+    "# maxsize=1000 means the cache will store the result of up to 1000 items\n",
+    "@lru_cache(maxsize=1000)\n",
+    "def get_playlist_tracks(playlist_uri):\n",
+    "    \"\"\"\n",
+    "    This function uses the Spotify API to get the tracks of a given playlist.\n",
+    "    The function is decorated with the lru_cache decorator to cache the result for each unique playlist_uri.\n",
+    "    So, if the same playlist_uri is passed to the function again, the cached result will be returned\n",
+    "    instead of making a new API call.\n",
+    "    :param playlist_uri: The Spotify URI of the playlist\n",
+    "    :return: A DataFrame containing the tracks of the playlist\n",
+    "    \"\"\"\n",
+    "    # Use the Spotify API to get the tracks of the playlist\n",
+    "    tracks = pd.json_normalize(sp.playlist_tracks(playlist_uri), record_path=['items'])\n",
+    "    return tracks"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -347,9 +372,8 @@
     "series = pd.Series(data['playlist_uri'])\n",
     "\n",
     "for playlist in tqdm(series):\n",
-    "    tracks = pd.json_normalize(sp.playlist_tracks(playlist), record_path=['items'])\n",
+    "    tracks = get_playlist_tracks(playlist)\n",
     "    if len(tracks) >= 100:\n",
-    "            tracks = pd.json_normalize(sp.playlist_tracks(playlist), record_path=['items'])\n",
     "            tracks2 = pd.json_normalize(sp.playlist_tracks(playlist, offset=100), record_path=['items'])\n",
     "            tracks3 = pd.json_normalize(sp.playlist_tracks(playlist, offset=200), record_path=['items'])\n",
     "            tracks = pd.concat([tracks, tracks2, tracks3])\n",
@@ -361,14 +385,14 @@
     "\n",
     "            test_list.append(tracks)\n",
     "    else:\n",
-    "        tracks = pd.json_normalize(sp.playlist_tracks(playlist), record_path=['items'])\n",
     "        secondary_data = pd.json_normalize(sp.playlist(playlist))\n",
     "        tracks['playlist_uri'] = playlist\n",
     "        tracks = tracks.merge(secondary_data, left_on='playlist_uri', right_on='uri')\n",
     "        tracks = tracks.rename(columns={\"name\":\"playlist_name\", \"track.name\":\"track_name\", \"track.uri\":\"track_uri\", \"track.album.name\":\"album_name\", \"track.explicit\":\"isExplicit\", \"track.album.release_date\":\"release_date\", \"track.duration_ms\":\"duration_ms\", \"track.album.uri\":\"album_uri\"})\n",
     "        tracks = tracks.drop(columns=['track.album.artists', 'track.album.available_markets', 'track.album.images', 'track.artists', 'track.available_markets', 'images', 'tracks.items'])\n",
-    "\n",
     "        test_list.append(tracks)\n",
+    "        \n",
+    "\n",
     "test_list = pd.concat(test_list)\n",
     "test_list.head(3)"
    ]
