--- a/InitialIngestionPipeline.ipynb
+++ b/InitialIngestionPipeline.ipynb
@@ -115,9 +115,9 @@
        "      <td>This is Titud</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364</th>\n",
-       "      <td>spotify:playlist:0gH8xj7AZqrGOHlu7wBe4a</td>\n",
-       "      <td>This is After the Burial</td>\n",
+       "      <th>511</th>\n",
+       "      <td>spotify:playlist:0kQ3zOWIlnCufFF0Fxbc5x</td>\n",
+       "      <td>Best of: Deutsch Hip-Hop</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -129,14 +129,14 @@
        "34   spotify:playlist:02eILNCPJV0hoYxMUreT0L   \n",
        "114  spotify:playlist:07Kw4TRKVUaIzJdiA86Kvu   \n",
        "353  spotify:playlist:0GB7f8by4WIynljqdp4xmR   \n",
-       "364  spotify:playlist:0gH8xj7AZqrGOHlu7wBe4a   \n",
+       "511  spotify:playlist:0kQ3zOWIlnCufFF0Fxbc5x   \n",
        "\n",
        "                         playlist_name  \n",
        "21   2020 top rap and hiphop hits 2022  \n",
        "34                          He is back  \n",
        "114                    slow down house  \n",
        "353                      This is Titud  \n",
-       "364           This is After the Burial  "
+       "511           Best of: Deutsch Hip-Hop  "
       ]
      },
      "execution_count": 3,
@@ -147,8 +147,8 @@
    "source": [
     "# establish connection to Spotify API\n",
     "\n",
-    "cid = 'e5448a8a4fdc4b5d98b44e956d50546d'\n",
-    "secret = '8924c0394d3f49a4a569fc03e891aa1b'\n",
+    "cid = 'b1d63d0b2fcc4b379cf7b7ad0d9d9fc0'\n",
+    "secret = '87f181a928e04a40977a281e9900e3b9'\n",
     "client_credentials = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials, requests_timeout=15, retries=10)\n",
     "\n",
@@ -191,10 +191,10 @@
      "output_type": "stream",
      "text": [
       "  0%|          | 0/25 [00:00<?, ?it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/01clVI1RPrF8zHMxrqVIs0/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "  4%|▍         | 1/25 [00:00<00:06,  3.87it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/02eILNCPJV0hoYxMUreT0L/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "  8%|▊         | 2/25 [00:00<00:04,  5.49it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/07Kw4TRKVUaIzJdiA86Kvu/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "HTTP Error for GET to https://api.spotify.com/v1/playlists/0GB7f8by4WIynljqdp4xmR/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "100%|██████████| 25/25 [00:18<00:00,  1.34it/s]\n"
+      "  4%|▍         | 1/25 [00:00<00:04,  5.07it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/02eILNCPJV0hoYxMUreT0L/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      "HTTP Error for GET to https://api.spotify.com/v1/playlists/07Kw4TRKVUaIzJdiA86Kvu/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      " 12%|█▏        | 3/25 [00:00<00:03,  5.99it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/0GB7f8by4WIynljqdp4xmR/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
+      "100%|██████████| 25/25 [00:21<00:00,  1.18it/s]\n"
      ]
     },
     {
@@ -244,121 +244,121 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-10-13T09:32:09Z</td>\n",
+       "      <td>2017-10-18T16:09:37Z</td>\n",
        "      <td>False</td>\n",
        "      <td>None</td>\n",
-       "      <td>https://open.spotify.com/user/ferdinand_123</td>\n",
-       "      <td>https://api.spotify.com/v1/users/ferdinand_123</td>\n",
-       "      <td>ferdinand_123</td>\n",
+       "      <td>https://open.spotify.com/user/marius.tholen</td>\n",
+       "      <td>https://api.spotify.com/v1/users/marius.tholen</td>\n",
+       "      <td>marius.tholen</td>\n",
        "      <td>user</td>\n",
-       "      <td>spotify:user:ferdinand_123</td>\n",
-       "      <td>album</td>\n",
-       "      <td>https://open.spotify.com/album/7ABqA1tuH6eonHA...</td>\n",
+       "      <td>spotify:user:marius.tholen</td>\n",
+       "      <td>compilation</td>\n",
+       "      <td>https://open.spotify.com/album/62tJU39A7UP3x85...</td>\n",
        "      <td>...</td>\n",
        "      <td>user</td>\n",
-       "      <td>spotify:user:ferdinand_123</td>\n",
-       "      <td>https://api.spotify.com/v1/playlists/0gH8xj7AZ...</td>\n",
+       "      <td>spotify:user:marius.tholen</td>\n",
+       "      <td>https://api.spotify.com/v1/playlists/0kQ3zOWIl...</td>\n",
        "      <td>100</td>\n",
-       "      <td>None</td>\n",
+       "      <td>https://api.spotify.com/v1/playlists/0kQ3zOWIl...</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
-       "      <td>35</td>\n",
+       "      <td>194</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2021-10-13T09:32:16Z</td>\n",
+       "      <td>2017-10-18T16:09:37Z</td>\n",
        "      <td>False</td>\n",
        "      <td>None</td>\n",
-       "      <td>https://open.spotify.com/user/ferdinand_123</td>\n",
-       "      <td>https://api.spotify.com/v1/users/ferdinand_123</td>\n",
-       "      <td>ferdinand_123</td>\n",
+       "      <td>https://open.spotify.com/user/marius.tholen</td>\n",
+       "      <td>https://api.spotify.com/v1/users/marius.tholen</td>\n",
+       "      <td>marius.tholen</td>\n",
        "      <td>user</td>\n",
-       "      <td>spotify:user:ferdinand_123</td>\n",
+       "      <td>spotify:user:marius.tholen</td>\n",
        "      <td>album</td>\n",
-       "      <td>https://open.spotify.com/album/5TYkzohGue5TQbh...</td>\n",
+       "      <td>https://open.spotify.com/album/5nhTPmBMCK46Ab9...</td>\n",
        "      <td>...</td>\n",
        "      <td>user</td>\n",
-       "      <td>spotify:user:ferdinand_123</td>\n",
-       "      <td>https://api.spotify.com/v1/playlists/0gH8xj7AZ...</td>\n",
+       "      <td>spotify:user:marius.tholen</td>\n",
+       "      <td>https://api.spotify.com/v1/playlists/0kQ3zOWIl...</td>\n",
        "      <td>100</td>\n",
-       "      <td>None</td>\n",
+       "      <td>https://api.spotify.com/v1/playlists/0kQ3zOWIl...</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
-       "      <td>35</td>\n",
+       "      <td>194</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2021-10-13T09:32:24Z</td>\n",
+       "      <td>2017-10-18T16:09:37Z</td>\n",
        "      <td>False</td>\n",
        "      <td>None</td>\n",
-       "      <td>https://open.spotify.com/user/ferdinand_123</td>\n",
-       "      <td>https://api.spotify.com/v1/users/ferdinand_123</td>\n",
-       "      <td>ferdinand_123</td>\n",
+       "      <td>https://open.spotify.com/user/marius.tholen</td>\n",
+       "      <td>https://api.spotify.com/v1/users/marius.tholen</td>\n",
+       "      <td>marius.tholen</td>\n",
        "      <td>user</td>\n",
-       "      <td>spotify:user:ferdinand_123</td>\n",
+       "      <td>spotify:user:marius.tholen</td>\n",
        "      <td>album</td>\n",
-       "      <td>https://open.spotify.com/album/7nv3yGO4wkaM41N...</td>\n",
+       "      <td>https://open.spotify.com/album/1Pxhd6AwPog83Ad...</td>\n",
        "      <td>...</td>\n",
        "      <td>user</td>\n",
-       "      <td>spotify:user:ferdinand_123</td>\n",
-       "      <td>https://api.spotify.com/v1/playlists/0gH8xj7AZ...</td>\n",
+       "      <td>spotify:user:marius.tholen</td>\n",
+       "      <td>https://api.spotify.com/v1/playlists/0kQ3zOWIl...</td>\n",
        "      <td>100</td>\n",
-       "      <td>None</td>\n",
+       "      <td>https://api.spotify.com/v1/playlists/0kQ3zOWIl...</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
-       "      <td>35</td>\n",
+       "      <td>194</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2021-10-13T09:32:46Z</td>\n",
+       "      <td>2017-10-18T16:09:37Z</td>\n",
        "      <td>False</td>\n",
        "      <td>None</td>\n",
-       "      <td>https://open.spotify.com/user/ferdinand_123</td>\n",
-       "      <td>https://api.spotify.com/v1/users/ferdinand_123</td>\n",
-       "      <td>ferdinand_123</td>\n",
+       "      <td>https://open.spotify.com/user/marius.tholen</td>\n",
+       "      <td>https://api.spotify.com/v1/users/marius.tholen</td>\n",
+       "      <td>marius.tholen</td>\n",
        "      <td>user</td>\n",
-       "      <td>spotify:user:ferdinand_123</td>\n",
+       "      <td>spotify:user:marius.tholen</td>\n",
        "      <td>album</td>\n",
-       "      <td>https://open.spotify.com/album/5f1laz8s1FtGICw...</td>\n",
+       "      <td>https://open.spotify.com/album/1Oz2G4HlbF8KFwn...</td>\n",
        "      <td>...</td>\n",
        "      <td>user</td>\n",
-       "      <td>spotify:user:ferdinand_123</td>\n",
-       "      <td>https://api.spotify.com/v1/playlists/0gH8xj7AZ...</td>\n",
+       "      <td>spotify:user:marius.tholen</td>\n",
+       "      <td>https://api.spotify.com/v1/playlists/0kQ3zOWIl...</td>\n",
        "      <td>100</td>\n",
-       "      <td>None</td>\n",
+       "      <td>https://api.spotify.com/v1/playlists/0kQ3zOWIl...</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
-       "      <td>35</td>\n",
+       "      <td>194</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2021-10-13T09:36:26Z</td>\n",
+       "      <td>2017-10-18T16:09:37Z</td>\n",
        "      <td>False</td>\n",
        "      <td>None</td>\n",
-       "      <td>https://open.spotify.com/user/ferdinand_123</td>\n",
-       "      <td>https://api.spotify.com/v1/users/ferdinand_123</td>\n",
-       "      <td>ferdinand_123</td>\n",
+       "      <td>https://open.spotify.com/user/marius.tholen</td>\n",
+       "      <td>https://api.spotify.com/v1/users/marius.tholen</td>\n",
+       "      <td>marius.tholen</td>\n",
        "      <td>user</td>\n",
-       "      <td>spotify:user:ferdinand_123</td>\n",
+       "      <td>spotify:user:marius.tholen</td>\n",
        "      <td>album</td>\n",
-       "      <td>https://open.spotify.com/album/54lULOCTaaoCBI3...</td>\n",
+       "      <td>https://open.spotify.com/album/3NsFn8eVQaA9yhT...</td>\n",
        "      <td>...</td>\n",
        "      <td>user</td>\n",
-       "      <td>spotify:user:ferdinand_123</td>\n",
-       "      <td>https://api.spotify.com/v1/playlists/0gH8xj7AZ...</td>\n",
+       "      <td>spotify:user:marius.tholen</td>\n",
+       "      <td>https://api.spotify.com/v1/playlists/0kQ3zOWIl...</td>\n",
        "      <td>100</td>\n",
-       "      <td>None</td>\n",
+       "      <td>https://api.spotify.com/v1/playlists/0kQ3zOWIl...</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
-       "      <td>35</td>\n",
+       "      <td>194</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -369,60 +369,67 @@
       ],
       "text/plain": [
        "               added_at  is_local primary_color_x  \\\n",
-       "0  2021-10-13T09:32:09Z     False            None   \n",
-       "1  2021-10-13T09:32:16Z     False            None   \n",
-       "2  2021-10-13T09:32:24Z     False            None   \n",
-       "3  2021-10-13T09:32:46Z     False            None   \n",
-       "4  2021-10-13T09:36:26Z     False            None   \n",
+       "0  2017-10-18T16:09:37Z     False            None   \n",
+       "1  2017-10-18T16:09:37Z     False            None   \n",
+       "2  2017-10-18T16:09:37Z     False            None   \n",
+       "3  2017-10-18T16:09:37Z     False            None   \n",
+       "4  2017-10-18T16:09:37Z     False            None   \n",
        "\n",
        "                added_by_external_urls_spotify  \\\n",
-       "0  https://open.spotify.com/user/ferdinand_123   \n",
-       "1  https://open.spotify.com/user/ferdinand_123   \n",
-       "2  https://open.spotify.com/user/ferdinand_123   \n",
-       "3  https://open.spotify.com/user/ferdinand_123   \n",
-       "4  https://open.spotify.com/user/ferdinand_123   \n",
+       "0  https://open.spotify.com/user/marius.tholen   \n",
+       "1  https://open.spotify.com/user/marius.tholen   \n",
+       "2  https://open.spotify.com/user/marius.tholen   \n",
+       "3  https://open.spotify.com/user/marius.tholen   \n",
+       "4  https://open.spotify.com/user/marius.tholen   \n",
        "\n",
        "                                    added_by_href    added_by_id  \\\n",
-       "0  https://api.spotify.com/v1/users/ferdinand_123  ferdinand_123   \n",
-       "1  https://api.spotify.com/v1/users/ferdinand_123  ferdinand_123   \n",
-       "2  https://api.spotify.com/v1/users/ferdinand_123  ferdinand_123   \n",
-       "3  https://api.spotify.com/v1/users/ferdinand_123  ferdinand_123   \n",
-       "4  https://api.spotify.com/v1/users/ferdinand_123  ferdinand_123   \n",
+       "0  https://api.spotify.com/v1/users/marius.tholen  marius.tholen   \n",
+       "1  https://api.spotify.com/v1/users/marius.tholen  marius.tholen   \n",
+       "2  https://api.spotify.com/v1/users/marius.tholen  marius.tholen   \n",
+       "3  https://api.spotify.com/v1/users/marius.tholen  marius.tholen   \n",
+       "4  https://api.spotify.com/v1/users/marius.tholen  marius.tholen   \n",
        "\n",
        "  added_by_type                added_by_uri track_album_album_type  \\\n",
-       "0          user  spotify:user:ferdinand_123                  album   \n",
-       "1          user  spotify:user:ferdinand_123                  album   \n",
-       "2          user  spotify:user:ferdinand_123                  album   \n",
-       "3          user  spotify:user:ferdinand_123                  album   \n",
-       "4          user  spotify:user:ferdinand_123                  album   \n",
+       "0          user  spotify:user:marius.tholen            compilation   \n",
+       "1          user  spotify:user:marius.tholen                  album   \n",
+       "2          user  spotify:user:marius.tholen                  album   \n",
+       "3          user  spotify:user:marius.tholen                  album   \n",
+       "4          user  spotify:user:marius.tholen                  album   \n",
        "\n",
        "                   track_album_external_urls_spotify  ... owner_type  \\\n",
-       "0  https://open.spotify.com/album/7ABqA1tuH6eonHA...  ...       user   \n",
-       "1  https://open.spotify.com/album/5TYkzohGue5TQbh...  ...       user   \n",
-       "2  https://open.spotify.com/album/7nv3yGO4wkaM41N...  ...       user   \n",
-       "3  https://open.spotify.com/album/5f1laz8s1FtGICw...  ...       user   \n",
-       "4  https://open.spotify.com/album/54lULOCTaaoCBI3...  ...       user   \n",
+       "0  https://open.spotify.com/album/62tJU39A7UP3x85...  ...       user   \n",
+       "1  https://open.spotify.com/album/5nhTPmBMCK46Ab9...  ...       user   \n",
+       "2  https://open.spotify.com/album/1Pxhd6AwPog83Ad...  ...       user   \n",
+       "3  https://open.spotify.com/album/1Oz2G4HlbF8KFwn...  ...       user   \n",
+       "4  https://open.spotify.com/album/3NsFn8eVQaA9yhT...  ...       user   \n",
        "\n",
        "                    owner_uri  \\\n",
-       "0  spotify:user:ferdinand_123   \n",
-       "1  spotify:user:ferdinand_123   \n",
-       "2  spotify:user:ferdinand_123   \n",
-       "3  spotify:user:ferdinand_123   \n",
-       "4  spotify:user:ferdinand_123   \n",
+       "0  spotify:user:marius.tholen   \n",
+       "1  spotify:user:marius.tholen   \n",
+       "2  spotify:user:marius.tholen   \n",
+       "3  spotify:user:marius.tholen   \n",
+       "4  spotify:user:marius.tholen   \n",
        "\n",
-       "                                         tracks_href tracks_limit tracks_next  \\\n",
-       "0  https://api.spotify.com/v1/playlists/0gH8xj7AZ...          100        None   \n",
-       "1  https://api.spotify.com/v1/playlists/0gH8xj7AZ...          100        None   \n",
-       "2  https://api.spotify.com/v1/playlists/0gH8xj7AZ...          100        None   \n",
-       "3  https://api.spotify.com/v1/playlists/0gH8xj7AZ...          100        None   \n",
-       "4  https://api.spotify.com/v1/playlists/0gH8xj7AZ...          100        None   \n",
+       "                                         tracks_href tracks_limit  \\\n",
+       "0  https://api.spotify.com/v1/playlists/0kQ3zOWIl...          100   \n",
+       "1  https://api.spotify.com/v1/playlists/0kQ3zOWIl...          100   \n",
+       "2  https://api.spotify.com/v1/playlists/0kQ3zOWIl...          100   \n",
+       "3  https://api.spotify.com/v1/playlists/0kQ3zOWIl...          100   \n",
+       "4  https://api.spotify.com/v1/playlists/0kQ3zOWIl...          100   \n",
        "\n",
-       "   tracks_offset tracks_previous tracks_total  track  video_thumbnail  \n",
-       "0              0            None           35    NaN              NaN  \n",
-       "1              0            None           35    NaN              NaN  \n",
-       "2              0            None           35    NaN              NaN  \n",
-       "3              0            None           35    NaN              NaN  \n",
-       "4              0            None           35    NaN              NaN  \n",
+       "                                         tracks_next  tracks_offset  \\\n",
+       "0  https://api.spotify.com/v1/playlists/0kQ3zOWIl...              0   \n",
+       "1  https://api.spotify.com/v1/playlists/0kQ3zOWIl...              0   \n",
+       "2  https://api.spotify.com/v1/playlists/0kQ3zOWIl...              0   \n",
+       "3  https://api.spotify.com/v1/playlists/0kQ3zOWIl...              0   \n",
+       "4  https://api.spotify.com/v1/playlists/0kQ3zOWIl...              0   \n",
+       "\n",
+       "  tracks_previous tracks_total  track  video_thumbnail  \n",
+       "0            None          194    NaN              NaN  \n",
+       "1            None          194    NaN              NaN  \n",
+       "2            None          194    NaN              NaN  \n",
+       "3            None          194    NaN              NaN  \n",
+       "4            None          194    NaN              NaN  \n",
        "\n",
        "[5 rows x 63 columns]"
       ]
@@ -478,7 +485,7 @@
     {
      "data": {
       "text/plain": [
-       "707"
+       "678"
       ]
      },
      "execution_count": 5,
@@ -725,7 +732,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -743,7 +750,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "93b5e9cdcd0e28194f38e9cc58755c27f28a497cb713889038a7c6359ab34ab6"
+    "hash": "e509a2683bb710c9bd3cef57d5381e640e8483d6e683f75b983dd6327c90c1d7"
    }
   }
  },
