--- a/Pipelines/Production/InitialIngestionPipeline.ipynb
+++ b/Pipelines/Production/InitialIngestionPipeline.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,134 +120,156 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15821</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO42VILm</td>\n",
-       "      <td>This Is King Von</td>\n",
+       "      <th>16061</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48QHdg</td>\n",
+       "      <td>This Is House 2 House</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15822</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO42VZOo</td>\n",
-       "      <td>This Is Steve Miller Band</td>\n",
+       "      <th>16062</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48qIOc</td>\n",
+       "      <td>This Is Daniel Santos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15823</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO42wJCc</td>\n",
-       "      <td>This Is Zhang Zhen Yue</td>\n",
+       "      <th>16063</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48QP3q</td>\n",
+       "      <td>This Is Velmurugan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15824</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO42X6uA</td>\n",
-       "      <td>This Is Tony Joe White</td>\n",
+       "      <th>16064</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48Rn9u</td>\n",
+       "      <td>This Is Kacey Musgraves</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15825</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO42xGyN</td>\n",
-       "      <td>This Is Quang L?p</td>\n",
+       "      <th>16065</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48RVfz</td>\n",
+       "      <td>This Is Mayke &amp; Rodrigo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15826</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO430FDW</td>\n",
-       "      <td>This Is Validuaté</td>\n",
+       "      <th>16066</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48sTNC</td>\n",
+       "      <td>This Is Toots &amp; The Maytals</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15827</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO430YQg</td>\n",
-       "      <td>This Is Mahalia Jackson</td>\n",
+       "      <th>16067</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48Tl79</td>\n",
+       "      <td>This Is Adolescent's Orquesta</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15828</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO432lGy</td>\n",
-       "      <td>This Is Laura Nyro</td>\n",
+       "      <th>16068</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48vRm5</td>\n",
+       "      <td>This Is Chelsea Wolfe</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15829</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO434ghu</td>\n",
-       "      <td>This Is Gregory Isaacs</td>\n",
+       "      <th>16069</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48wKu4</td>\n",
+       "      <td>This Is Ozzy Osbourne</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15830</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO434wkq</td>\n",
-       "      <td>This Is DappyTKeys</td>\n",
+       "      <th>16070</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48wtr2</td>\n",
+       "      <td>This Is Frxzbie</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15831</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO43aim6</td>\n",
-       "      <td>This Is La Luz</td>\n",
+       "      <th>16071</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48wtVJ</td>\n",
+       "      <td>This Is Darlene Zschech</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15832</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO43Bf9e</td>\n",
-       "      <td>This Is Fianru</td>\n",
+       "      <th>16072</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO48yGQO</td>\n",
+       "      <td>This Is Great White</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15833</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO43Bwcg</td>\n",
-       "      <td>This Is HVOB</td>\n",
+       "      <th>16073</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO490IOB</td>\n",
+       "      <td>This Is Vision Quest</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15834</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO43CZZA</td>\n",
-       "      <td>This Is LOS UNICOS DE MEXICO</td>\n",
+       "      <th>16074</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO49100e</td>\n",
+       "      <td>This Is Wicca Phase Springs Eternal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15835</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO43dtuw</td>\n",
-       "      <td>This Is BRDigung</td>\n",
+       "      <th>16075</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO491yeR</td>\n",
+       "      <td>This Is Udit Narayan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15836</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO43eq5z</td>\n",
-       "      <td>This Is Feng Ze</td>\n",
+       "      <th>16076</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO49263K</td>\n",
+       "      <td>This Is Shinedown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15837</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO43FDVL</td>\n",
-       "      <td>This Is Cotton Jones</td>\n",
+       "      <th>16077</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO49Bx42</td>\n",
+       "      <td>This Is Khainz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15838</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO43gTwQ</td>\n",
-       "      <td>This Is Ouse</td>\n",
+       "      <th>16078</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO49C75y</td>\n",
+       "      <td>This Is DJ Zirk</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15839</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO43ixP2</td>\n",
-       "      <td>This Is Gareth.T</td>\n",
+       "      <th>16079</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO49C7sY</td>\n",
+       "      <td>This Is Zeppet Store</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15840</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DZ06evO43IXpZ</td>\n",
-       "      <td>This Is Andy Montañez</td>\n",
+       "      <th>16080</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO49FsFs</td>\n",
+       "      <td>This Is David Quinlan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  playlist_uri                 playlist_name\n",
-       "15821  spotify:playlist:37i9dQZF1DZ06evO42VILm              This Is King Von\n",
-       "15822  spotify:playlist:37i9dQZF1DZ06evO42VZOo     This Is Steve Miller Band\n",
-       "15823  spotify:playlist:37i9dQZF1DZ06evO42wJCc        This Is Zhang Zhen Yue\n",
-       "15824  spotify:playlist:37i9dQZF1DZ06evO42X6uA        This Is Tony Joe White\n",
-       "15825  spotify:playlist:37i9dQZF1DZ06evO42xGyN             This Is Quang L?p\n",
-       "15826  spotify:playlist:37i9dQZF1DZ06evO430FDW             This Is Validuaté\n",
-       "15827  spotify:playlist:37i9dQZF1DZ06evO430YQg       This Is Mahalia Jackson\n",
-       "15828  spotify:playlist:37i9dQZF1DZ06evO432lGy            This Is Laura Nyro\n",
-       "15829  spotify:playlist:37i9dQZF1DZ06evO434ghu        This Is Gregory Isaacs\n",
-       "15830  spotify:playlist:37i9dQZF1DZ06evO434wkq            This Is DappyTKeys\n",
-       "15831  spotify:playlist:37i9dQZF1DZ06evO43aim6                This Is La Luz\n",
-       "15832  spotify:playlist:37i9dQZF1DZ06evO43Bf9e                This Is Fianru\n",
-       "15833  spotify:playlist:37i9dQZF1DZ06evO43Bwcg                  This Is HVOB\n",
-       "15834  spotify:playlist:37i9dQZF1DZ06evO43CZZA  This Is LOS UNICOS DE MEXICO\n",
-       "15835  spotify:playlist:37i9dQZF1DZ06evO43dtuw              This Is BRDigung\n",
-       "15836  spotify:playlist:37i9dQZF1DZ06evO43eq5z               This Is Feng Ze\n",
-       "15837  spotify:playlist:37i9dQZF1DZ06evO43FDVL          This Is Cotton Jones\n",
-       "15838  spotify:playlist:37i9dQZF1DZ06evO43gTwQ                  This Is Ouse\n",
-       "15839  spotify:playlist:37i9dQZF1DZ06evO43ixP2              This Is Gareth.T\n",
-       "15840  spotify:playlist:37i9dQZF1DZ06evO43IXpZ         This Is Andy Montañez"
+       "                                  playlist_uri  \\\n",
+       "16061  spotify:playlist:37i9dQZF1DZ06evO48QHdg   \n",
+       "16062  spotify:playlist:37i9dQZF1DZ06evO48qIOc   \n",
+       "16063  spotify:playlist:37i9dQZF1DZ06evO48QP3q   \n",
+       "16064  spotify:playlist:37i9dQZF1DZ06evO48Rn9u   \n",
+       "16065  spotify:playlist:37i9dQZF1DZ06evO48RVfz   \n",
+       "16066  spotify:playlist:37i9dQZF1DZ06evO48sTNC   \n",
+       "16067  spotify:playlist:37i9dQZF1DZ06evO48Tl79   \n",
+       "16068  spotify:playlist:37i9dQZF1DZ06evO48vRm5   \n",
+       "16069  spotify:playlist:37i9dQZF1DZ06evO48wKu4   \n",
+       "16070  spotify:playlist:37i9dQZF1DZ06evO48wtr2   \n",
+       "16071  spotify:playlist:37i9dQZF1DZ06evO48wtVJ   \n",
+       "16072  spotify:playlist:37i9dQZF1DZ06evO48yGQO   \n",
+       "16073  spotify:playlist:37i9dQZF1DZ06evO490IOB   \n",
+       "16074  spotify:playlist:37i9dQZF1DZ06evO49100e   \n",
+       "16075  spotify:playlist:37i9dQZF1DZ06evO491yeR   \n",
+       "16076  spotify:playlist:37i9dQZF1DZ06evO49263K   \n",
+       "16077  spotify:playlist:37i9dQZF1DZ06evO49Bx42   \n",
+       "16078  spotify:playlist:37i9dQZF1DZ06evO49C75y   \n",
+       "16079  spotify:playlist:37i9dQZF1DZ06evO49C7sY   \n",
+       "16080  spotify:playlist:37i9dQZF1DZ06evO49FsFs   \n",
+       "\n",
+       "                             playlist_name  \n",
+       "16061                This Is House 2 House  \n",
+       "16062                This Is Daniel Santos  \n",
+       "16063                   This Is Velmurugan  \n",
+       "16064              This Is Kacey Musgraves  \n",
+       "16065              This Is Mayke & Rodrigo  \n",
+       "16066          This Is Toots & The Maytals  \n",
+       "16067        This Is Adolescent's Orquesta  \n",
+       "16068                This Is Chelsea Wolfe  \n",
+       "16069                This Is Ozzy Osbourne  \n",
+       "16070                      This Is Frxzbie  \n",
+       "16071              This Is Darlene Zschech  \n",
+       "16072                  This Is Great White  \n",
+       "16073                 This Is Vision Quest  \n",
+       "16074  This Is Wicca Phase Springs Eternal  \n",
+       "16075                 This Is Udit Narayan  \n",
+       "16076                    This Is Shinedown  \n",
+       "16077                       This Is Khainz  \n",
+       "16078                      This Is DJ Zirk  \n",
+       "16079                 This Is Zeppet Store  \n",
+       "16080                This Is David Quinlan  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,14 +399,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:14<00:00,  1.39it/s]\n"
+      "100%|██████████| 20/20 [00:11<00:00,  1.75it/s]\n"
      ]
     },
     {
@@ -398,301 +420,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 806/806 [01:40<00:00,  8.01it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updata #1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 807/807 [01:13<00:00, 10.91it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:11<00:00,  1.77it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 832/832 [01:41<00:00,  8.21it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updata #2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 832/832 [01:16<00:00, 10.81it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:11<00:00,  1.74it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 803/803 [01:46<00:00,  7.55it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updata #3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 803/803 [01:16<00:00, 10.55it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:11<00:00,  1.68it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 779/779 [01:39<00:00,  7.83it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updata #4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 779/779 [01:13<00:00, 10.62it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:10<00:00,  1.82it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 663/663 [01:26<00:00,  7.63it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updata #5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 663/663 [01:01<00:00, 10.78it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:11<00:00,  1.74it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 672/672 [01:29<00:00,  7.49it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updata #6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 672/672 [01:01<00:00, 10.88it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:10<00:00,  1.87it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 802/802 [01:36<00:00,  8.29it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "artists updata #7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 802/802 [01:14<00:00, 10.77it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "audio_features updated #7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:11<00:00,  1.74it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #8\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|▏         | 10/782 [00:01<01:28,  8.70it/s]"
+      " 11%|█▏        | 88/768 [00:12<01:24,  8.01it/s]"
      ]
     }
    ],
@@ -706,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -746,7 +474,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "e509a2683bb710c9bd3cef57d5381e640e8483d6e683f75b983dd6327c90c1d7"
+    "hash": "93b5e9cdcd0e28194f38e9cc58755c27f28a497cb713889038a7c6359ab34ab6"
    }
   }
  },
